project(lab12)
add_executable(lab12 main_12.cpp Student.cpp Student.h GraduationDao.cpp GraduationDao.h GraduationDaoImpl.cpp GraduationDaoImpl.h GraduationService.h GraduationServiceImpl.cpp GraduationServiceImpl.h Settlement.h SettlementStatisics.h SettlementStatisticsImpl.cpp SettlementStatisticsImpl.h)
